fix container z-index

--- a/source/assets/stylesheets/generic/_grid.sass
+++ b/source/assets/stylesheets/generic/_grid.sass
@@ -15,6 +15,8 @@
 .container-inn
   max-width: $max-width
   overflow: hidden
+  position: relative
+  z-index: 10
 
 %flex-row
   box-sizing: border-box
